# hep-score-energy

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pylintrc  .stestr.conf  AUTHORS  COPYING  COPYRIGHT  ChangeLog  Dockerfile  MANIFEST.in  README.md  get_power.py  hepscore  msr_power.py  rapl_power.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
docker-images/tox/: Dockerfile
etc/: hepscore-default.yaml
hepscore/: __init__.py  cpu_model.py  hepscore.py  hepscorev2.py  hs.conf  main.py  msr_power.py  pcap_power.py  perf_power.py  test.py
hepscore/etc/: hepscore-cvmfs-test.yaml  hepscore-cvmfs.yaml  hepscore-default.yaml  hepscore-gpu.yaml  hepscore19_0.4.yaml  hepscore19_0.9.yaml  hepscore20_0.1.yaml  hepscore20_0.2.yaml  hepscore20_0.3-cvmfs.yaml  hepscore20_0.3.yaml  hepscore20_0.5-cvmfs.yaml  hepscore20_0.5.yaml  hepscore20_0.6-cvmfs.yaml  hepscore20_0.6.yaml  hepscore20_0.7-cvmfs.yaml  hepscore20_0.7.yaml  hepscore20_slim_0.7-cvmfs.yaml  hepscore20_slim_0.7.yaml  hepscore20poc_0.8-cvmfs.yaml  hepscore20poc_0.8.yaml  hepscore20poc_slim_0.8-cvmfs.yaml  hepscore20poc_slim_0.8.yaml  hepscore23-cvmfs.yaml  hepscore23.yaml  hepscore23_arm-cvmfs.yaml  hepscore23_arm.yaml  hepscore23_beta-cvmfs.yaml  hepscore23_beta.yaml  hepscore23_beta_arm-cvmfs.yaml  hepscore23_beta_arm.yaml  hepscore2X_0.8-cvmfs.yaml  hepscore2X_0.8.yaml  hepscore2X_slim_0.8-cvmfs.yaml  hepscore2X_slim_0.8.yaml  hepscore_beta-cvmfs.yaml  hepscore_beta.yaml  hepscore_testkv.yaml
hepscore/tests/: mock_hepscore.py  run_bat_tests.sh  test_cmd.py  test_hepscore.bat  test_hepscore.py  test_main.py
hepscore/tests/data/: expected_output.json
hepscore/tests/etc/: hepscore_conf.yaml  hepscore_conf_bmsreco_only.yaml  hepscore_conf_ci.yaml  (+4 more)
(+146 files in other folders)
