[metadata]
name = hep-score
summary = Evaluate HEPscore from HEP workloads
description-file =
    README.md
author = HEPiX Benchmarking WG
author-email = #cloud-infrastructure-3rd-level@cern.ch
home-page = https://gitlab.cern.ch/hep-benchmarks/hep-score
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
#data_files =
#    etc/rally-tester =
#        etc/rally-tester.conf
packages =
    hepscore
    

[entry_points]
console_scripts =
    hep-score = hepscore.hepscore:main
