[metadata]
name = hep-score
summary = Evaluate HEPscore from HEP workloads
description-file = README.md
author = HEPiX Benchmarking Working Group
author-email = benchmark-suite-wg-devel@cern.ch
home-page = https://gitlab.cern.ch/hep-benchmarks/hep-score
license = GPLv3
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
skip_git_sdist = 1
version =

[files]
packages =
    hepscore
data_files =
    etc/ = etc/*

[entry_points]
console_scripts =
    hep-score = hepscore.main:main
    hepscore = hepscore.main:main

